<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/data_header"/>

    <ListPreference
        android:key="method_construction_select"
        android:title="@string/construction_select_title"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/method_construction"
        android:entryValues="@array/method_construction"/>

    <ListPreference
        android:key="method_process_select"
        android:title="@string/process_select_title"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/method_process"
        android:entryValues="@array/method_process"/>

    <ListPreference
        android:key="method_hazard_select"
        android:title="@string/hazard_select_title"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/method_hazard"
        android:entryValues="@array/method_hazard"
        />

    <ListPreference
        android:key="method_hazard_position_select"
        android:title="@string/hazard_position_select_title"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/method_hazard_position"
        android:entryValues="@array/method_hazard_position"/>

    <ListPreference
        android:key="method_damage_select"
        android:title="@string/damage_select_title"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/method_damage"
        android:entryValues="@array/method_damage"/>
    <PreferenceCategory/>
</PreferenceScreen>